Cambios finales al proyecto. terminado

--- a/Pages/Tienda.html
+++ b/Pages/Tienda.html
@@ -99,97 +99,106 @@
             <a href="../Imagenes/filtro.png" alt="iconofiltro"></a>
         </div>
 <!-- Productos -->
-<div class="Productos1">
+<div class="Productos">
     <img src="../Imagenes/Groot.jpg" alt="produto1"class="producto1">
-    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <h2>Maceta Groot </h2>
+    <span>$400</span>
     <form action="number">
     <label for="Cantidades">Cant</label>
     <input type="number" name="Cantidades" id="Cantidades">
-    <input type="button" value="Añadir al carrito">
+    <input type="button" value="Añadir al carrito" class="añadirCarrito">
     </form>
 </div>
 
-<div class="Productos2">
+<div class="Productos">
     <img src="../Imagenes/lapicero.jpg" alt="produto1"class="producto1">
-    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <h2>Lapicero </h2>
+    <span>$500</span>
     <form action="number">
     <label for="Cantidades">Cant</label>
     <input type="number" name="Cantidades" id="Cantidades">
-    <input type="button" value="Añadir al carrito">
+    <input type="button" value="Añadir al carrito" class="añadirCarrito">
     </form>
 </div>
 
-<div class="Productos3">
+<div class="Productos">
     <img src="../Imagenes/macetaflor2.jpg" alt="produto1"class="producto1">
-    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <h2>Maceta "Flor"</h2>
+    <span>$500</span>
     <form action="number">
     <label for="Cantidades">Cant</label>
     <input type="number" name="Cantidades" id="Cantidades">
-    <input type="button" value="Añadir al carrito">
+    <input type="button" value="Añadir al carrito" class="añadirCarrito">
     </form>
 </div>
 
-<div class="Productos4">
+<div class="Productos">
     <img src="../Imagenes/macetasmilox2.jpg" alt="produto1"class="producto1">
-    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <h2>Maceta Milo </h2>
+    <span>$800</span>
     <form action="number">
     <label for="Cantidades">Cant</label>
     <input type="number" name="Cantidades" id="Cantidades">
-    <input type="button" value="Añadir al carrito">
+    <input type="button" value="Añadir al carrito" class="añadirCarrito">
     </form>
 </div>
 
-<div class="Productos5">
+<div class="Productos">
     <img src="../Imagenes/macetasrusticas.jpg" alt="produto1"class="producto1">
-    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <h2>Macetas "Rusticas"</h2>
+    <span>$500</span>
     <form action="number">
     <label for="Cantidades">Cant</label>
     <input type="number" name="Cantidades" id="Cantidades">
-    <input type="button" value="Añadir al carrito">
+    <input type="button" value="Añadir al carrito" class="añadirCarrito">
     </form>
 </div>
 
-<div class="Productos6">
+<div class="Productos">
     <img src="../Imagenes/combomacetaschicas.jpg" alt="produto1"class="producto1">
-    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <h2>Macetas "Chicas" </h2>
+    <span>$500</span>
     <form action="number">
     <label for="Cantidades">Cant</label>
     <input type="number" name="Cantidades" id="Cantidades">
-    <input type="button" value="Añadir al carrito">
+    <input type="button" value="Añadir al carrito" class="añadirCarrito">
     </form>
 </div>
 
-<div class="Productos7">
+<div class="Productos">
     <img src="../Imagenes/velamano.jpg" alt="produto1"class="producto1">
-    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <h2> Porta Vela "Mano" </h2>
+    <span>$600</span>
     <form action="number">
     <label for="Cantidades">Cant</label>
     <input type="number" name="Cantidades" id="Cantidades">
-    <input type="button" value="Añadir al carrito">
+    <input type="button" value="Añadir al carrito" class="añadirCarrito">
     </form>
 </div>
 
-<div class="Productos8">
+<div class="Productos">
     <img src="../Imagenes/Velas2.jpg" alt="produto1"class="producto1">
-    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <h2>Velas Aromaticas Pomelo</h2>
+    <span>$700</span>
     <form action="number">
     <label for="Cantidades">Cant</label>
-    <input type="number" name="Cantidades" id="Cantidades">
-    <input type="button" value="Añadir al carrito">
+    <input type="number" name="Cantidades" id="Cantidades" class="cant">
+    <input type="button" value="Añadir al carrito" class="añadirCarrito">
     </form>
 </div>
 
-<div class="Productos9">
+<div class="Productos">
     <img src="../Imagenes/Velas3.jpg" alt="produto1"class="producto1">
-    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
+    <h2>Velas Aromaticas Naranja</h2>
+    <span>$800</span>
     <form action="number">
     <label for="Cantidades">Cant</label>
-    <input type="number" name="Cantidades" id="Cantidades">
-    <input type="button" value="Añadir al carrito">
+    <input type="number" name="Cantidades" id="Cantidades" class="cant">
+    <input type="button" value="Añadir al carrito" class="añadirCarrito">
     </form>
 </div>
 
-<div class="Productos10">
+<!-- <div class="Productos10">
     <img src="../Imagenes/portamacetamadera.jpg" alt="produto1"class="producto1">
     <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
     <form action="number">
@@ -215,7 +224,7 @@
     <input type="number" name="Cantidades" id="Cantidades">
     <input type="button" value="Añadir al carrito">
     </form>
-</div>
+</div> -->
 
 
 
@@ -232,149 +241,6 @@
 
 
 </div>
-
-    <!-- <div class="banner">
-        <img src="../Imagenes/3y6cuotas.png" alt="Imagen con promociones" class="bannerPromociones" >
-    </div>
-    <br> -->
-    
-    <!-- <div id="tiendaCategorias">
-        <ul>
-            <li><a href:="Categorias">Macetas</a></li>
-            <li><a href:="Categorias">Cuadros</a></li>
-            <li><a href:="Categorias">Velas</a></li>
-            <li><a href:="Categorias">Ofertas</a></li>
-            <li><a href:="Categorias">Lapiceros</a></li>
-            <li><a href:="Categorias">Personalizados</a></li>
-        </ul>
-    </div> -->
-    <!-- <h2 class="secciones"> Macetas</h2>
-    <section class="flex-container">
-        <div>
-            <img src="../Imagenes/Groot.jpg" alt="produto1"class="producto1">
-            <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>    
-        <div class=>
-            <img src="../Imagenes/MacetaFlores.jpg" alt="Producto2" class="producto1">
-            <p>Descripcion del Producto</p>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
-        <div class=>
-            <img src="../Imagenes/macetallama.jpg" alt="Producto2" class="producto1">
-            <p>Descripcion del Producto</p>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
-    </section>
-    <br><br>
-    <h2 class="secciones">Cuadros</h2>
-    <section class="flex-container">
-        <div class=>
-            <img src="../Imagenes/MacetaLilo.jpg" alt="Producto2" class="producto1">
-            <p>Descripcion del Producto</p>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
-        <div class=>
-            <img src="../Imagenes/MacetaMilo.jpg" alt="Producto2" class="producto1">
-            <p>Descripcion del Producto</p>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
-        <div class=>
-            <img src="../Imagenes/CuadroMapa.jpg" alt="Producto2" class="producto1">
-            <p>Descripcion del Producto</p>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
-    </section>
-    <br><br>
-    <h2 class="secciones">Ofertas</h2>       
-    <div class="flex-container">
-        <div class=>
-            <img src="../Imagenes/macetaconejo.jpg" alt="Producto2" class="producto1">
-            <p>Descripcion del Producto</p>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
-        <div class=>
-            <img src="../Imagenes/Macetasimpson.jpg" alt="Producto2" class="producto1">
-            <p>Descripcion del Producto</p>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
-        <div class=>
-            <img src="../Imagenes/Velas.jpg" alt="Producto2" class="producto1">
-            <p>Descripcion del Producto</p>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
-    </div>
-    <br><br>
-    <h2 class="secciones">Personalizados</h2>
-    <section class="flex-container">
-        <div class=>
-            <img src="../Imagenes/Amongus.jpg" alt="Producto2" class="producto1">
-            <p>Descripcion del Producto</p>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
-        <div class=>
-            <img src="../Imagenes/Macetaharry.jpg" alt="Producto2" class="producto1">
-            <p>Descripcion del Producto</p>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
-        <div class=>
-            <img src="../Imagenes/Macetapaisaje.jpg" alt="Producto2" class="producto1">
-            <p>Descripcion del Producto</p>
-            <form action="number">
-            <label for="Cantidades">Cant</label>
-            <input type="number" name="Cantidades" id="Cantidades">
-            <input type="button" value="Añadir al carrito">
-            </form>
-        </div>
-    </section> -->
-
-
-
-
 
 
     <br><br><br><br><br><br><br><br><br><br>
