--- a/index.html
+++ b/index.html
@@ -65,17 +65,7 @@
                 </ul>
             </div>
         </nav>
-    <!-- <nav class="menu" >
-        <div>
-        <ul>
-            <li><a class="navbar-brand" href="Index.html">Inicio</a></li>
-            <li><a class="navbar-brand"href="Pages/Tienda.html">Tienda</a></li>
-            <li><a class="navbar-brand"href="Pages/Seguimiento.html">Seguimiento</a></li>
-            <li><a class="navbar-brand" href="Pages/Ayuda.html">Ayuda</a></li>
-            <li><a class="navbar-brand" href="Pages/Contacto.html">Contacto</a></li>
-        </ul>
-        </div>
-        </nav>  -->
+
     </header>
 
     <div class="mensajes">
@@ -90,7 +80,42 @@
         </div>
     </div>
 
-    <h2 class="lonuevo"> LO NUEVO</h2>
+    <div class="contenedor_inicio">
+        <div class="somosJano">
+            <h2>SOMOS JANO DECORACIONES</h2>
+            <P> Somos un emprendimiento Marplatense dedicado a la creacion con amor de artesanias para el hogar, desde macetas con plantas, hasta figuras de porcelana fria decorativas. Fundado en 2020 tras un año duro de pandemia , llegamos para quedarnos , y contamos con una sucursal fisica en nuestra ciudad Mar del Plata , ubicada en la calle comercial GUEMES.</P><br>
+            <span class="mensajefinal">"JANO DECORACIONES" Creando con amor.</span>
+        </div>
+        <div class="inicio_fotoLogo">
+            <img src="imagenes/janoinicio.jpg" alt="">
+        </div>
+        <h3 class="nuestrascreaciones_titulo">Algunas De Nuestras Creaciones </h3>
+        <div class="inicio_nuestrascreaciones">
+            <img src="imagenes/lapicerogato.jpg" alt="" class="productos_inicio">
+            <img src="imagenes/macetacerdo.jpg" alt="" class="productos_inicio">
+            <img src="imagenes/Macetaharry.jpg" alt="" class="productos_inicio">
+            <img src="imagenes/MacetaMilo.jpg" alt="" class="productos_inicio">
+            <img src="imagenes/MacetaFlores.jpg" alt="" class="productos_inicio">
+            <img src="imagenes/macetafloresgrande.jpg" alt="" class="productos_inicio">
+            <img src="imagenes/Macetapaisaje.jpg" alt="" class="productos_inicio">
+            <img src="imagenes/portavela vaceros.jpg" alt="" class="productos_inicio">
+
+        </div>
+<br>
+        <H3 class="nuestras_redes">Nuestras Redes</H3>
+        <div class="inicio_redes">
+            <img src="imagenes/facebookicono2 (2).png" alt="" class="fotos_inicio_redes">
+            <img src="imagenes/twittericono2.png" alt="" class="fotos_inicio_redes">
+            <img src="imagenes/instragramicono2.png" alt="" class="fotos_inicio_redes">
+
+
+        </div>
+
+
+
+
+    </div>
+    <!-- <h2 class="lonuevo"> LO NUEVO</h2>
 <div class="Container_fotos">
         <div>
         <img src="imagenes/Amongus.jpg" alt=""><br><br><p class="descripcion">Figura "Among Us" <br><span>$400</span></p>
@@ -131,7 +156,7 @@
     <div>
     <img src="Imagenes/macetavela2.jpg" alt=""><br><br><p class="descripcion">Maceta Porta vela <br> <del>$1800</del><br><span>$900</span></p>
     </div>
-</div>
+</div> -->
 
     <br><br><br><br><br>
     <footer>
