--- a/Pages/Seguimiento.html
+++ b/Pages/Seguimiento.html
@@ -15,7 +15,7 @@
 <body id="fondo">
     <header>
         <div class="header_aviso">
-            <img src="../imagenes/instragramicono.png" class="header_aviso_instagram" ><!--Aca van los iconos de las redes sociales-->
+            <img src="../imagenes/instagramicono.png" class="header_aviso_instagram" ><!--Aca van los iconos de las redes sociales-->
             <img src="../Imagenes/twittericono.png" class="header_aviso_twitter"><!--Aca van los iconos de las redes sociales-->
             <img  src="../imagenes/facebookicono.png"class="header_aviso_facebook"><!--Aca van los iconos de las redes sociales-->
             <p class="header_aviso_promocion">15% de descuento abonando mediante transferencia/efectivo</p><!--Aca iria un mensaje dinamico cuando hay un dia con promociones bancarias, este se vera reflejado-->
@@ -89,7 +89,7 @@
         <div class="conteiner_redes" >
             <br>
             <div>
-            <img src="../imagenes/facebookicono2 (2).png" class="PiePagina_icono_facebook2"><!--Aca van los iconos de las redes sociales-->
+            <img src="../imagenes/facebookicono2.png" class="PiePagina_icono_facebook2"><!--Aca van los iconos de las redes sociales-->
             </div>
             <div>
             <img src="../Imagenes/twittericono2.png" class="PiePagina_icono_twitter2"><!--Aca van los iconos de las redes sociales-->
