--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header_aviso">
             <img src="imagenes/instagramicono.png" class="header_aviso_instagram" ><!--Aca van los iconos de las redes sociales-->
             <img src="Imagenes/twittericono.png" class="header_aviso_twitter"><!--Aca van los iconos de las redes sociales-->
-            <img  src="imagenes/facebookicono.png"class="header_aviso_facebook"><!--Aca van los iconos de las redes sociales-->
+            <img src="imagenes/facebookicono.png"class="header_aviso_facebook"><!--Aca van los iconos de las redes sociales-->
             <p class="header_aviso_promocion">15% de descuento abonando mediante transferencia/efectivo</p><!--Aca iria un mensaje dinamico cuando hay un dia con promociones bancarias, este se vera reflejado-->
         </div>
         <div class="Header_Logo">
@@ -87,7 +87,7 @@
             <span class="mensajefinal">"JANO DECORACIONES" Creando con amor.</span>
         </div>
         <div class="inicio_fotoLogo">
-            <img src="imagenes/janoinicio.jpg" alt="">
+            <img src="imagenes/jano.jpg" alt="">
         </div>
         <h3 class="nuestrascreaciones_titulo">Algunas De Nuestras Creaciones </h3>
         <div class="inicio_nuestrascreaciones">
@@ -165,7 +165,7 @@
             <div class="conteiner_redes" >
                 <br>
                 <div>
-                <img src="imagenes/facebookicono2 (2).png" class="PiePagina_icono_facebook2"><!--Aca van los iconos de las redes sociales-->
+                <img src="imagenes/facebookicono2.png" class="PiePagina_icono_facebook2"><!--Aca van los iconos de las redes sociales-->
                 </div>
                 <div>
                 <img src="Imagenes/twittericono2.png" class="PiePagina_icono_twitter2"><!--Aca van los iconos de las redes sociales-->
