--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body id="fondo">
     <header>
         <div class="header_aviso">
-            <img src="imagenes/instagramicono.png" class="header_aviso_instagram" ><!--Aca van los iconos de las redes sociales-->
+            <img src="imagenes/instragramicono2.png" class="header_aviso_instagram" ><!--Aca van los iconos de las redes sociales-->
             <img src="Imagenes/twittericono.png" class="header_aviso_twitter"><!--Aca van los iconos de las redes sociales-->
             <img src="imagenes/facebookicono.png"class="header_aviso_facebook"><!--Aca van los iconos de las redes sociales-->
             <p class="header_aviso_promocion">15% de descuento abonando mediante transferencia/efectivo</p><!--Aca iria un mensaje dinamico cuando hay un dia con promociones bancarias, este se vera reflejado-->
@@ -104,7 +104,7 @@
 <br>
         <H3 class="nuestras_redes">Nuestras Redes</H3>
         <div class="inicio_redes">
-            <img src="imagenes/facebookicono2 (2).png" alt="" class="fotos_inicio_redes">
+            <img src="imagenes/facebookicono2.png" alt="" class="fotos_inicio_redes">
             <img src="imagenes/twittericono2.png" alt="" class="fotos_inicio_redes">
             <img src="imagenes/instragramicono2.png" alt="" class="fotos_inicio_redes">
 
