--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="Header_Logo">
             <div class="Header_cont_logo"><!--Logo de la Pagina-->
-                <img src="imagenes/logo_janoblanco.png" alt="IconoJano" class="Header_fotoJano">
+                <img src="imagenes/janoblanco.png" alt="IconoJano" class="Header_fotoJano">
             </div>
             <div class="header_cont_buscador">
                 <form action="search" method="post" >
