--- a/Pages/Tienda.html
+++ b/Pages/Tienda.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jano Decoraciones | Tienda</title>
-    <link rel="stylesheet" href="../CSS/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
     <header>
         <div class="header_aviso">
             <img src="../imagenes/instagramnegro.png" class="header_aviso_instagram" ><!--Aca van los iconos de las redes sociales-->
-            <img src="../Imagenes/twittericono.png" class="header_aviso_twitter"><!--Aca van los iconos de las redes sociales-->
+            <img src="../imagenes/twittericono.png" class="header_aviso_twitter"><!--Aca van los iconos de las redes sociales-->
             <img  src="../imagenes/facebookicono.png"class="header_aviso_facebook"><!--Aca van los iconos de las redes sociales-->
             <p class="header_aviso_promocion">15% de descuento abonando mediante transferencia/efectivo</p><!--Aca iria un mensaje dinamico cuando hay un dia con promociones bancarias, este se vera reflejado-->
         </div>
@@ -31,10 +31,10 @@
             </form>
         </div>
         <div>
-            <img src="../Imagenes/carroblanco.png" alt="carritoCompra" class="carritoCompra">
+            <img src="../imagenes/carroblanco.png" alt="carritoCompra" class="carritoCompra">
         </div>
         <div>
-            <img src="../Imagenes/cuenta.png" alt="" class="carritoCompra">
+            <img src="../imagenes/cuenta.png" alt="" class="carritoCompra">
         </div>
     </div>
     <div class="Header_navbar">
@@ -96,11 +96,11 @@
 
         <div class="filtro">
             <input type="search" name="buscar" placeholder="Buscar">
-            <a href="../Imagenes/filtro.png" alt="iconofiltro"></a>
+            <a href="../imagenes/filtro.png" alt="iconofiltro"></a>
         </div>
 <!-- Productos -->
 <div class="Productos">
-    <img src="../Imagenes/Groot.jpg" alt="produto1"class="producto1">
+    <img src="../imagenes/Groot.jpg" alt="produto1"class="producto1">
     <h2>Maceta Groot </h2>
     <span>$400</span>
     <form action="number">
@@ -111,7 +111,7 @@
 </div>
 
 <div class="Productos">
-    <img src="../Imagenes/lapicero.jpg" alt="produto1"class="producto1">
+    <img src="../imagenes/lapicero.jpg" alt="produto1"class="producto1">
     <h2>Lapicero </h2>
     <span>$500</span>
     <form action="number">
@@ -122,7 +122,7 @@
 </div>
 
 <div class="Productos">
-    <img src="../Imagenes/macetaflor2.jpg" alt="produto1"class="producto1">
+    <img src="../imagenes/macetaflor2.jpg" alt="produto1"class="producto1">
     <h2>Maceta "Flor"</h2>
     <span>$500</span>
     <form action="number">
@@ -133,7 +133,7 @@
 </div>
 
 <div class="Productos">
-    <img src="../Imagenes/macetasmilox2.jpg" alt="produto1"class="producto1">
+    <img src="../imagenes/macetasmilox2.jpg" alt="produto1"class="producto1">
     <h2>Maceta Milo </h2>
     <span>$800</span>
     <form action="number">
@@ -144,7 +144,7 @@
 </div>
 
 <div class="Productos">
-    <img src="../Imagenes/macetasrusticas.jpg" alt="produto1"class="producto1">
+    <img src="../imagenes/macetasrusticas.jpg" alt="produto1"class="producto1">
     <h2>Macetas "Rusticas"</h2>
     <span>$500</span>
     <form action="number">
@@ -155,7 +155,7 @@
 </div>
 
 <div class="Productos">
-    <img src="../Imagenes/combomacetaschicas.jpg" alt="produto1"class="producto1">
+    <img src="../imagenes/combomacetaschicas.jpg" alt="produto1"class="producto1">
     <h2>Macetas "Chicas" </h2>
     <span>$500</span>
     <form action="number">
@@ -166,7 +166,7 @@
 </div>
 
 <div class="Productos">
-    <img src="../Imagenes/velamano.jpg" alt="produto1"class="producto1">
+    <img src="../imagenes/velamano.jpg" alt="produto1"class="producto1">
     <h2> Porta Vela "Mano" </h2>
     <span>$600</span>
     <form action="number">
@@ -177,7 +177,7 @@
 </div>
 
 <div class="Productos">
-    <img src="../Imagenes/Velas2.jpg" alt="produto1"class="producto1">
+    <img src="../imagenes/Velas2.jpg" alt="produto1"class="producto1">
     <h2>Velas Aromaticas Pomelo</h2>
     <span>$700</span>
     <form action="number">
@@ -188,7 +188,7 @@
 </div>
 
 <div class="Productos">
-    <img src="../Imagenes/Velas3.jpg" alt="produto1"class="producto1">
+    <img src="../imagenes/Velas3.jpg" alt="produto1"class="producto1">
     <h2>Velas Aromaticas Naranja</h2>
     <span>$800</span>
     <form action="number">
@@ -197,48 +197,6 @@
     <input type="button" value="Añadir al carrito" class="añadirCarrito">
     </form>
 </div>
-
-<!-- <div class="Productos10">
-    <img src="../Imagenes/portamacetamadera.jpg" alt="produto1"class="producto1">
-    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
-    <form action="number">
-    <label for="Cantidades">Cant</label>
-    <input type="number" name="Cantidades" id="Cantidades">
-    <input type="button" value="Añadir al carrito">
-    </form>
-</div>
-<div class="Productos11">
-    <img src="../Imagenes/CuadroMontaña.jpg" alt="produto1"class="producto1">
-    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
-    <form action="number">
-    <label for="Cantidades">Cant</label>
-    <input type="number" name="Cantidades" id="Cantidades">
-    <input type="button" value="Añadir al carrito">
-    </form>
-</div>
-<div class="Productos12">
-    <img src="../Imagenes/lapicerogato.jpg" alt="produto1"class="producto1">
-    <h2>Maceta Groot <span class="badge bg-secondary">Nuevo</span></h2>
-    <form action="number">
-    <label for="Cantidades">Cant</label>
-    <input type="number" name="Cantidades" id="Cantidades">
-    <input type="button" value="Añadir al carrito">
-    </form>
-</div> -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </div>
 
@@ -253,10 +211,10 @@
                 <img src="../imagenes/facebookicono2.png" class="PiePagina_icono_facebook2"><!--Aca van los iconos de las redes sociales-->
                 </div>
                 <div>
-                <img src="../Imagenes/twittericono2.png" class="PiePagina_icono_twitter2"><!--Aca van los iconos de las redes sociales-->
+                <img src="../imagenes/twittericono2.png" class="PiePagina_icono_twitter2"><!--Aca van los iconos de las redes sociales-->
                 </div>
                 <div>
-                <img src="../Imagenes/instragramicono2.png"class="PiePagina_icono_instagram2"><!--Aca van los iconos de las redes sociales-->
+                <img src="../imagenes/instragramicono2.png"class="PiePagina_icono_instagram2"><!--Aca van los iconos de las redes sociales-->
                 </div>
                 <br>
             </div>
