--- a/Pages/Ayuda.html
+++ b/Pages/Ayuda.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jano Decoraciones | Ayuda</title>
-    <link rel="stylesheet" href="../CSS/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
     <header>
         <div class="header_aviso">
             <img src="../imagenes/instagramnegro.png" class="header_aviso_instagram" ><!--Aca van los iconos de las redes sociales-->
-            <img src="../Imagenes/twittericono.png" class="header_aviso_twitter"><!--Aca van los iconos de las redes sociales-->
+            <img src="../imagenes/twittericono.png" class="header_aviso_twitter"><!--Aca van los iconos de las redes sociales-->
             <img  src="../imagenes/facebookicono.png"class="header_aviso_facebook"><!--Aca van los iconos de las redes sociales-->
             <p class="header_aviso_promocion">15% de descuento abonando mediante transferencia/efectivo</p><!--Aca iria un mensaje dinamico cuando hay un dia con promociones bancarias, este se vera reflejado-->
         </div>
@@ -32,10 +32,10 @@
                 </form>
             </div>
             <div>
-                <img src="../Imagenes/carroblanco.png" alt="carritoCompra" class="carritoCompra">
+                <img src="../imagenes/carroblanco.png" alt="carritoCompra" class="carritoCompra">
             </div>
             <div>
-                <img src="../Imagenes/cuenta.png" alt="" class="carritoCompra">
+                <img src="../imagenes/cuenta.png" alt="" class="carritoCompra">
             </div>
         </div>
     <div class="Header_navbar">
@@ -125,10 +125,10 @@
                 <img src="../imagenes/facebookicono2.png" class="PiePagina_icono_facebook2"><!--Aca van los iconos de las redes sociales-->
                 </div>
                 <div>
-                <img src="../Imagenes/twittericono2.png" class="PiePagina_icono_twitter2"><!--Aca van los iconos de las redes sociales-->
+                <img src="../imagenes/twittericono2.png" class="PiePagina_icono_twitter2"><!--Aca van los iconos de las redes sociales-->
                 </div>
                 <div>
-                <img src="../Imagenes/instragramicono2.png"class="PiePagina_icono_instagram2"><!--Aca van los iconos de las redes sociales-->
+                <img src="../imagenes/instragramicono2.png"class="PiePagina_icono_instagram2"><!--Aca van los iconos de las redes sociales-->
                 </div>
                 <br>
             </div>
