--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
                         <a class="nav-link" href="index.html"> Inicio</a>
                     </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Pages/Tienda.html">Tienda</a>
+                    <a class="nav-link" href="pages/Tienda.html">Tienda</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Pages/Seguimiento.html">Seguimiento</a>
+                    <a class="nav-link" href="pages/Seguimiento.html">Seguimiento</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Pages/Ayuda.html">Ayuda </a>
+                    <a class="nav-link" href="pages/Ayuda.html">Ayuda </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Pages/Contacto.html">Contacto</a>
+                    <a class="nav-link" href="pages/Contacto.html">Contacto</a>
                 </li>              
                 </ul>
             </div>
